kong/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kong-ingress
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/strip-path: "true"
spec:
  rules:
  - host: api.kong.local
    http:
      paths:
      - path: /echo
        backend:
          serviceName: echo
          servicePort: 80
      - path: /hello
        backend:
          serviceName: hello
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: secure-kong-ingress
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/strip-path: "true"
    konghq.com/plugins: keycloak-oidc
spec:
  rules:
  - host: api.kong.local
    http:
      paths:
      - path: /secure/echo
        backend:
          serviceName: echo
          servicePort: 80
      - path: /secure/hello
        backend:
          serviceName: hello
          servicePort: 80
