kong/kong-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kong-ingress
  annotations:
    kubernetes.io/ingress.class: "kong"
spec:
  rules:
  - host: api.kong.local
    http:
      paths:
      - path: /foo
        backend:
          serviceName: echoserver
          servicePort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: secure-kong-ingress
  annotations:
    kubernetes.io/ingress.class: "kong"
    konghq.com/strip-path: "true"
    konghq.com/plugins: "oidc"
spec:
  rules:
  - host: api.kong.local
    http:
      paths:
      - path: /secure/foo
        backend:
          serviceName: echoserver
          servicePort: 8080
